set(SRUN_PRIVATE_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
add_subdirectory(net)
aux_source_directory(. SRUN_SOURCES)
add_library(srun ${SRUN_SOURCES} $<TARGET_OBJECTS:srun_net> $<TARGET_OBJECTS:srun_stbrumme_hash>)
target_link_libraries(srun PRIVATE ${SRUN_EXTERNAL_LIB})
target_include_directories(srun PUBLIC $<BUILD_INTERFACE:${SRUN_PUBLIC_INCLUDE_DIRS}> $<INSTALL_INTERFACE:include>)
target_include_directories(srun PRIVATE ${SRUN_PRIVATE_INCLUDE_DIR})
add_subdirectory(cli)
